fix iframe gap

--- a/src/layouts/game.css
+++ b/src/layouts/game.css
@@ -32,6 +32,7 @@ main h1 {
 }
 
 iframe {
+	display: block;
 	border: none;
 	background-color: black;
 	width: 100%;
